--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^3.8.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "react-slick": "^0.15.4",
+    "redux": "^3.7.2",
+    "redux-act": "^1.5.0",
+    "redux-loop": "^4.2.4",
+    "redux-thunk": "^2.2.0",
     "semantic-react": "^0.12.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.0",
@@ -25,6 +31,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "redux-devtools": "^3.4.1"
   }
 }
